# MiniTeaTree

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13910a8641b0_add_bonus_system.py  2a3b4c5d6e7f_add_no_cashback_on_redemption.py  2bc9c5dc3f1e_init.py  5f5077d82b23_add_referral_system.py  7f4debae03a7_add_bonus_used_to_orders.py  8a9b0c1d2e3f_set_bonus_max_payment_pct_99.py  a1b2c3d4e5f6_add_image_path_to_categories.py  a7b8c9d0e1f2_site_about.py  add_is_demo_to_catalog.py  b6c6a25b092b_add_is_unit_and_unit_label_to_products.py  c3d4e5f6a7b8_unified_order_status.py  d4e5f6a7b8c9_add_feedback_sent_at_to_orders.py  d7cc6f4412fa_add_analytics_fields_users_orders.py  e5f6a7b8c9d0_pickup_point_structured_address.py  f6a7b8c9d0e1_pickup_point_map_embed_src.py  g7b8c9d0e1f2_add_tbank_payment_id_to_orders.py
backend/app/: __init__.py  config.py  db.py  demo_clean.py  demo_seed.py  deps.py  fix_demo_isolation.py  logging.py  main.py  security.py  seed.py  tbank.py
backend/app/admin/: __init__.py  auth.py  bonus_settings.py  crm_customer.py  crm_order.py  dashboard.py  import_page.py  import_worker.py  inject.py  model_views.py  router.py  shared.py  upload.py
backend/app/admin/pages/: about.py  dashboard.py  orders.py
backend/app/admin/templates/sqladmin/: create.html  edit.html  layout.html
backend/app/admin/templates/sqladmin/modals/: delete.html
backend/app/bot/: __init__.py  handlers.py  notify.py  status_notify.py
backend/app/models/: __init__.py  admin.py  banner.py  base.py  bonus.py  cart.py  category.py  content.py  delivery.py  enums.py  notification.py  order.py  payment.py  product.py  referral.py  user.py  yml_import.py
backend/app/routers/: cart.py  catalog.py  info.py  orders.py  payments.py  referral.py
backend/app/schemas/: __init__.py
backend/app/services/: image.py  payment.py  yml_parser.py
backend/scripts/: cleanup_uploads.py
backend/tests/: conftest.py  test_bot.py  test_cart.py  test_catalog.py  test_config.py  test_meta.py  test_models.py  test_notifications.py  test_orders.py  test_payments.py  test_security.py  test_yml_parser.py
docs/: DEMO_DEPLOY.md  DEPLOY.md
frontend/: index.html
frontend/js/: api.js  app.js  utils.js
frontend/js/pages/: about.js  cart.js  catalog.js  checkout.js  home.js  orders.js  profile.js  referral.js
nginx/: nginx.conf
scripts/: cleanup_uploads.py
