[project]
name = "miniteatree-backend"
version = "0.1.0"
description = "Чайное Дерево — Telegram Mini App магазин чая (FastAPI + asyncpg + aiogram)"
requires-python = ">=3.12"

dependencies = [
    # Web-фреймворк
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    # ASGI-серверная утилита
    "python-multipart>=0.0.9",
    # БД (async)
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",   # синхронный драйвер для alembic-миграций
    "alembic>=1.13.0",
    # Валидация / конфиг
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Безопасность / авторизация
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    # Telegram бот
    "aiogram>=3.7.0",
    # YML-парсинг
    "lxml>=5.2.0",
    # HTTP-клиент (для скачивания фото фида, вызовов ЮKassa)
    "httpx>=0.27.0",
    # Обработка изображений (валидация/сжатие)
    "Pillow>=10.3.0",
    # Админка
    "sqladmin>=0.18.0",
    "itsdangerous>=2.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Логирование
    "structlog>=24.1.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",        # мок httpx для тестов
    "aiosqlite>=0.20.0",    # для быстрых юнит-тестов с SQLite
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "S",        # bandit (security)
    "C4",       # comprehensions
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "S101",     # assert в тестах — ок
    "S104",     # 0.0.0.0 binding — ок для контейнера
    "S105",     # «possible hardcoded password» в дефолтах — ок
    "S603",     # subprocess.run — используем осознанно
    "B008",     # Depends(...) в дефолтных аргументах — стандарт FastAPI
    "RUF001",   # ambiguous cyrillic в строках — проект русскоязычный
    "RUF002",   # ambiguous cyrillic в docstrings — проект русскоязычный
    "RUF003",   # ambiguous cyrillic в комментариях — проект русскоязычный
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]
"alembic/**" = ["E501", "S"]

# ---------- pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "*/tests/*"]
